# FullStackFinal

./: .env.example  .gitignore  LAB1_RBAC.md  LAB4_SEO_EXTERNAL_API.md  LAB5_TESTING.md  LAB6_CONTAINERIZATION_CICD.md  README_LAB5_LAB6_RUN.md  docker-compose.yml
ai-interview-platform/: .dockerignore  .env.example  .gitignore  Dockerfile  LAB2_AUTH.md  LAB3_STORAGE_SEARCH.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
ai-interview-platform/app/: main.py
ai-interview-platform/app/api/: dependencies.py
ai-interview-platform/app/api/v1/: router.py
ai-interview-platform/app/api/v1/endpoints/: admin.py  ml.py  (+7 more)
ai-interview-platform/app/auth/: dependencies.py  rbac.py
ai-interview-platform/app/core/: config.py  security.py
ai-interview-platform/app/db/: database.py  init_db.py
ai-interview-platform/app/ml/: text_scorer.py
ai-interview-platform/app/models/: __init__.py  interview.py  interview_session.py  interview_turn.py  refresh_session.py  resume_asset.py  user.py
ai-interview-platform/app/repositories/: refresh_sessions.py  users.py
ai-interview-platform/app/schemas/: auth.py  external_resource.py  interview.py  ml.py  resume.py  user.py
ai-interview-platform/app/services/: ai_interviewer.py  auth_service.py  external_resources.py  storage.py  user_store.py
ai-interview-platform/tests/: conftest.py  test_auth_api.py  test_auth_service_unit.py  test_external_resource_service_unit.py  test_health.py  test_interviews.py  test_rbac_api.py  test_resources_api.py  test_resumes_api.py  test_storage_service_unit.py
(+52 files in other folders)
