[project]
name = "ai-interview-platform"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic-settings>=2.4",
  "email-validator>=2.2",
  "sqlalchemy>=2.0",
  "boto3>=1.34",
  "httpx>=0.27",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
  "unit: fast unit tests for services and pure functions",
  "integration: API endpoint and database integration tests",
  "e2e: end-to-end scenarios executed through the running application",
  "slow: tests that may use external services or containers",
]
